Improved Helm Chart
Signed-off-by: Radu Moisan <radu.moisan@gmail.com>

--- a/Chart.yaml
+++ b/Chart.yaml
@@ -14,7 +14,7 @@ sources:
 maintainers:
   - name: Radu Moisan
     email: radu@virtomat.io
-icon: https://github.com/virtomat/rancher-rke2-cluster-template/blob/3abbcf6749c82cc8284899c764b79bfc31fca9df/virtomat.png
+icon: https://raw.githubusercontent.com/virtomat/rancher-rke2-cluster-template/3abbcf6749c82cc8284899c764b79bfc31fca9df/virtomat.png
 annotations:
   catalog.cattle.io/type: cluster-template
   catalog.cattle.io/namespace: fleet-default
