--- a/values.yaml
+++ b/values.yaml
@@ -4,8 +4,8 @@
 # x-additionalManifests: &additionalManifests |
 #   # Add Manifests that should additionally be deployed on the nodes/cluster
 
-# Beginner or Advanced
-configMode: Beginner
+# Simple or Advanced
+configMode: Simple
 
 cloudprovider: openstack
 
