--- a/questions.yaml
+++ b/questions.yaml
@@ -57,7 +57,7 @@ questions:
     group: 'General'
     show_if: configMode=Advanced
   - variable: cluster.config.cloudCredentialSecretName
-    default: cc-openstack-generic
+#    default: cc-openstack-generic
     description: 'CloudCredentialName for provisioning cluster'
     label: 'CloudCredential Name'
     type: cloudcredential
