--- a/templates/cluster.yaml
+++ b/templates/cluster.yaml
@@ -205,7 +205,8 @@ spec:
         quantity: {{ $nodepool.quantity }}
         etcdRole: {{ $nodepool.etcdRole }}
         controlPlaneRole: {{ $nodepool.controlPlaneRole }}
-        workerRole: {{ $nodepool.workerRole }}
+        # assumed false if index is zero (first pool is for master nodes) and true otherwise (the rest of the pools are for worker nodes)
+        workerRole: {{ ne $index 0 }}
         {{- if $nodepool.labels }}
         labels:
           {{- with $nodepool.labels }}
