--- a/questions.yaml
+++ b/questions.yaml
@@ -333,7 +333,7 @@ questions:
     #show_if: "configMode=Advanced && nodePoolTemplate=SinglePool"
     group: 'Master Nodepool'
   - variable: nodepools.0.worker
-
+    default: 'true'
     label: worker
     type: boolean
     #show_if: "configMode=Advanced && nodePoolTemplate=SinglePool"
@@ -351,7 +351,7 @@ questions:
   # ~~~~~~~~~~~~~~~~~~~ Section: Nodepool Generic Extra ~~~~~~~~~~~~~~~~~~~~~~~~
   # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-  - variable: nodepools.0.extraConfigs
+  - variable: masternode.extraConfigs
     default: 'false'
     label: 'Show Master Nodes Additional Configs (Generic)'
     description: 'Additional Configuration specific for Master Nodes'
@@ -390,7 +390,7 @@ questions:
       - variable: nodepools.0.unhealthyNodeTimeout
         group: 'Master Nodepool Extra'
         show_if: "configMode=Advanced"
-  - variable: nodepools.0.openstackExtraConfigs
+  - variable: masternode.openstackExtraConfigs
     default: 'false'
     label: 'Show Master Nodes Additional Configs (Openstack)'
     description: 'Additional Openstack Configuration specific for Master Nodes'
