--- a/values.yaml
+++ b/values.yaml
@@ -28,9 +28,23 @@ cluster:
     cloudCredentialSecretName: ""
 
     openstack:
+      authUrl: ""
       applicationCredentialName: ""
       applicationCredentialId: ""
       applicationCredentialSecret: ""
+      defaultPrivateKey: |
+        -----BEGIN OPENSSH PRIVATE KEY-----
+        b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAMwAAAAtzc2gtZW
+        QyNTUxOQAAACD6GCQIea+xjQss77/KM1rzP9EDobU8on849hXOXgvU+AAAAKBJ7GiDSexo
+        gwAAAAtzc2gtZWQyNTUxOQAAACD6GCQIea+xjQss77/KM1rzP9EDobU8on849hXOXgvU+A
+        AAAEA49MGONYhJx9Ir2Rezg60NoPKKLCD19eCKX2KJjaphgfoYJAh5r7GNCyzvv8ozWvM/
+        0QOhtTyifzj2Fc5eC9T4AAAAHXJhZHUubW9pc2FuQGNvbXB1dGFjZW50ZXIuY29t
+        -----END OPENSSH PRIVATE KEY-----
+      defaultKeypairName: bootstrap
+      sshPort: 22
+      sshUser: ubuntu
+      region: RegionOne
+      secGroups: default
 
     # defaultClusterRoleForProjectMembers:
     # defaultPodSecurityAdmissionConfigurationTemplateName:
